# cosmos-os

./: .clang-format  .gitignore  .gitmodules  cross.ini  iso.sh  linker.ld  meson.build
.github/workflows/: build-iso.yml
src/: gdt.cpp  limine.cpp  limine.hpp  main.cpp  serial.cpp  serial.hpp  tss.cpp  tss.hpp  utils.cpp  utils.hpp
src/acpi/: acpi.cpp  acpi.hpp  uacpi.cpp
src/devices/: atapio.cpp  framebuffer.cpp  framebuffer.hpp  info.cpp  info.hpp  keyboard.cpp  keyboard.hpp  null.cpp  null.hpp  pci.cpp  pci.hpp  pit.cpp  pit.hpp  ps2kbd.cpp  ps2kbd.hpp
src/elf/: loader.cpp  loader.hpp  parser.cpp  parser.hpp  types.hpp
src/interrupts/: info.hpp  isr.asm  isr.cpp  isr.hpp  pic.cpp  pic.hpp
src/log/: color.hpp  devfs.cpp  display.cpp  display.hpp  font.cpp  font.hpp  log.cpp  log.hpp
src/memory/: heap.cpp  heap.hpp  offsets.hpp  physical.cpp  physical.hpp  virt_range_alloc.cpp  virt_range_alloc.hpp  virtual.cpp  virtual.hpp
src/scheduler/: event.cpp  event.hpp  private.hpp  scheduler.cpp  scheduler.hpp
src/shell/: color.hpp  commands.cpp  commands.hpp  shell.cpp  shell.hpp
src/stl/: ctype.hpp  expected.hpp  fixed_list.hpp  linked_list.hpp  result.hpp  ring_buffer.hpp  span.hpp  string_view.hpp
src/syscalls/: handlers.cpp  init.cpp  init.hpp
src/task/: event.cpp  event.hpp  pipe.cpp  pipe.hpp  process.cpp  process.hpp  scheduler.cpp  scheduler.hpp
src/vfs/: devfs.cpp  devfs.hpp  iso9660.cpp  iso9660.hpp  path.cpp  path.hpp  ramfs.cpp  ramfs.hpp  types.hpp  vfs.cpp  vfs.hpp
subprojects/shell/: color.hpp  commands.cpp  commands.hpp  font.cpp  font.hpp  keyboard.hpp  main.cpp  meson.build  nanoprintf.cpp  syscalls.hpp  terminal.cpp  terminal.hpp  utils.cpp
subprojects/stl/: meson.build
subprojects/stl/include/stl/: bit_field.hpp  ctype.hpp  fixed_list.hpp  linked_list.hpp  mem.hpp  optional.hpp  rc.hpp  ring_buffer.hpp  span.hpp  string_view.hpp  utils.hpp
